--- a/sitemap.html
+++ b/sitemap.html
@@ -22,9 +22,21 @@
   <ul>
     <li><a href="index.html"> Home</a></li>
     <li><a href="example.html"> Example</a></li>
-      <li><a href="faq.html"> Faq</a></li>
-      <li><a href="error-page.html"> Faq</a></li>
-
+    <li><a href="about-us.html"> About-us</a></li>
+    <li><a href="gallery.html"> Our gallery</a></li>
+    <li><a href="faq.html"> Faq</a></li>
+    <li><a href="procedure.html"> Procedure</a></li>
+    <li><a href="term.html"> Term</a></li>
+    <li><a href="pricing.html"> Pricing & Duration</a></li>
+    <li><a href="gift.html"> Gift Cards</a></li>
+    <li><a href="order.html"> Order</a></li>
+    <li><a href="order-2.html"> Order Page 2</a></li>
+    <li><a href="order-3.html"> Order Page 3</a></li>
+    <li><a href="cart.html">Cart</a></li>
+    <li><a href="checkout.html"> Checkout</a></li>
+    <li><a href="blog.html"> Blog</a></li>
+    <li><a href="article.html"> Article</a></li>
+    <li><a href="error-page.html"> 404</a></li>
   </ul>
 <script type="text/javascript" src="bundle.js"></script><script type="text/javascript" src="svgsprite.js"></script></body>
 
