--- a/order-3.html
+++ b/order-3.html
@@ -452,7 +452,7 @@
 
         </div>
         <div class="order-actions">
-          <button class="order-actions__back">Back</button>
+          <button class="order-actions__back js-controls__back">Back</button>
         
         
           <button type="submit" class="btn btn--accent-border">
